amqp-test-receiver/target/classes/META-INF/fabric8/openshift/amqp-test-receiver-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 39cb939a12d0641de452474428cc80c43ccbbf33
    fabric8.io/git-branch: master
    fabric8.io/git-url: git@github.com:mike-costello/amqp-test-parent.git
  labels:
    app: amqp-test-receiver
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.redhat.integration.examples.amqp
  name: amqp-test-receiver
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: amqp-test-receiver
    provider: fabric8
    group: com.redhat.integration.examples.amqp
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 39cb939a12d0641de452474428cc80c43ccbbf33
        fabric8.io/git-branch: master
        fabric8.io/git-url: git@github.com:mike-costello/amqp-test-parent.git
      labels:
        app: amqp-test-receiver
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: com.redhat.integration.examples.amqp
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: amqp/amqp-test-receiver:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
        name: vertx
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
